# embedded-snake-rs

./: Cargo.toml
examples/: simulator_128x64.rs  simulator_8x8.rs
src/: lib.rs
