[package]
name = "embedded-snake"
description = "Snake game implementation in Rust with no-std. It uses embedded-graphics as a display target."
version = "0.0.3"
edition = "2021"
keywords = ["embedded-graphics", "graphics", "embedded", "game", "snake"]
categories = ["embedded", "no-std"]
homepage = "https://github.com/libesz/embedded-snake-rs/"
repository = "https://github.com/libesz/embedded-snake-rs/"
license = "Apache-2.0"
exclude = [".vscode/launch.json"]

[dependencies]
embedded-graphics = "0.8.1"
rand_core = "0.9.3"

[dev-dependencies]
embedded-graphics-simulator = "0.7.0"
rand = "0.9.2"
